; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/marvell/mvpp2/extr_mvpp2_cls.c_mvpp2_cls_flow_last_set.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/marvell/mvpp2/extr_mvpp2_cls.c_mvpp2_cls_flow_last_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mvpp2_cls_flow_entry = type { i32* }

@MVPP2_CLS_FLOW_TBL0_LAST = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mvpp2_cls_flow_entry*, i32)* @mvpp2_cls_flow_last_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mvpp2_cls_flow_last_set(%struct.mvpp2_cls_flow_entry* %0, i32 %1) #0 {
  %3 = alloca %struct.mvpp2_cls_flow_entry*, align 8
  %4 = alloca i32, align 4
  store %struct.mvpp2_cls_flow_entry* %0, %struct.mvpp2_cls_flow_entry** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @MVPP2_CLS_FLOW_TBL0_LAST, align 4
  %6 = xor i32 %5, -1
  %7 = load %struct.mvpp2_cls_flow_entry*, %struct.mvpp2_cls_flow_entry** %3, align 8
  %8 = getelementptr inbounds %struct.mvpp2_cls_flow_entry, %struct.mvpp2_cls_flow_entry* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  %10 = getelementptr inbounds i32, i32* %9, i64 0
  %11 = load i32, i32* %10, align 4
  %12 = and i32 %11, %6
  store i32 %12, i32* %10, align 4
  %13 = load i32, i32* %4, align 4
  %14 = icmp ne i32 %13, 0
  %15 = xor i1 %14, true
  %16 = xor i1 %15, true
  %17 = zext i1 %16 to i32
  %18 = load %struct.mvpp2_cls_flow_entry*, %struct.mvpp2_cls_flow_entry** %3, align 8
  %19 = getelementptr inbounds %struct.mvpp2_cls_flow_entry, %struct.mvpp2_cls_flow_entry* %18, i32 0, i32 0
  %20 = load i32*, i32** %19, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 0
  %22 = load i32, i32* %21, align 4
  %23 = or i32 %22, %17
  store i32 %23, i32* %21, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
